--- a/css/style.css
+++ b/css/style.css
@@ -136,27 +136,22 @@ nav input{
     }
     
     nav .containe #menu:checked ~ .links{
-        height: 100vh;  
-        border-radius: 0%;
-    
+        clip-path: circle(100% at 50% 50%);
     }
     
     .links{
         position: absolute;
-        width: 100%;
-        top: 100%;
-        width: 90%;
-        height: 0;  
-        border-radius: 50%;
+        width: 100vw;
+        height: 100vh; 
+        top: 100%; 
         overflow: hidden;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        background-color: rgb(220, 20, 60);
+        background-color: #fff;
         transition: 1s all;
         z-index: 11;
-        
-    
+        clip-path: circle(0% at 50% 50%);
     }
     .links a{
         color: crimson;
